         autotools per patch #953734.
20040518 roms/se-0.rom: Change 3 bytes at 0x240 to XOR A, OUT (FF), A instead
         of NOP, NOP, NOP. This resets the SCLD on real hardware.
20040519 machine.c,snapshot.[ch],zxcf.[ch]: add support for saving
	 snapshots with ZXCF support.
20040521 trdos.c,machines/{pentagon.c,scorpion.c,spec128.c}: use /ROMCS
	 to page in the TRDOS ROM.
20040521 spec_se.c,specplus3.c: enable /ROMCS on the +2A/+3/+3e/SE to
	 let ZXCF work there.
20040521 machines/{machines.h,tc2048.c,tc2068.c}: get the dock/exrom
	 working properly again.
20040521 if2.[ch],snapshot.c: Add support for saving interface 2 cart in
         snapshots.
20040524 if2.c,snapshot.c: Fix Interface II eject menu state after snapshot
         loading.
20040524 ui/gtk/Makefile.am: ensure config.h can be found when processing
	 menu_data.c.
20040524 zxcf.c: start the 'last memory control' byte off in the
	 'ZXCF disabled' state.
20040525 dck.[ch],if2.c,memory.[ch],snapshot.c,
         machines/{spec16.c,spec_se.c,tc2048.c,tc2068.c}: Add Timex Dock
         snapshot support per patch #959422.
20040525 snapshot.c,machines/spec_se.c: allow saving of the dock/exrom
	 from the Spectrum SE.
20040525 tape.c,lib/{tape_plus3e.szx,tape_se.szx}: add autoload snaps for
	 the +3e and SE, and allow autoload snaps to be .szx as well as
	 .z80.
20040525 sound/hpsound.c: update for 16-bit sound (Stuart Brady).
20040527 sound/hpsound.c: further small update (Stuart Brady).
20040527 snapshot.c: Save Timex HSR register for the Spectrum SE.
20040527 snapshot.c: Use existing memory pages for Dock/Exrom when loading SE
         snapshots.
20040527 snapshot.c: Enable dock cartridge eject menu item when loading 2068
         snapshots with Dock cartridges installed.
20040527 if2.[ch],memory.c,periph.c,trdos.[ch],zxatasp.[ch],zxcf.[ch]:
	 simplify the handling of /ROMCS memory mapping.
20040527 utils.c: make TRDOS autoloading work again.