@@ -868,3 +868,4 @@
 20040527 if2.[ch],memory.c,periph.c,trdos.[ch],zxatasp.[ch],zxcf.[ch]:
 	 simplify the handling of /ROMCS memory mapping.
 20040527 utils.c: make TRDOS autoloading work again.
+20040527 zxatasp.c: ZXATASP write protect should protect only the odd pages.
